--- a/E2-Trees.ipynb
+++ b/E2-Trees.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "d253b229",
    "metadata": {},
    "outputs": [],
@@ -23,6 +23,297 @@
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "df = pd.read_csv('titanic.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e6a59610",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# En schysst funktion för att göra någonting av kabin-nummer. Henrik delar upp cabin i CabinSection och CabinNumber \n",
+    "# (baserat på bokstaven framför, och siffran efteråt).\n",
+    "def dictionary_function(df, col):\n",
+    "    my_value_list = sorted(list(set([item[0] for item in list(set(list(df[col].values)))])))\n",
+    "    my_ranking_list = list(range(len(my_value_list)))\n",
+    "    my_dictionary = {}\n",
+    "    for x,y in zip(my_value_list, my_ranking_list):\n",
+    "        my_dictionary[x] = y\n",
+    "    df.replace({col: my_dictionary}, inplace=True)\n",
+    "    return df\n",
+    "\n",
+    "# Dumma kolumner tas bort.\n",
+    "dumb_cols = ['Unnamed: 0', 'Unnamed: 0.1']\n",
+    "for col in dumb_cols:\n",
+    "    if col in df.columns:\n",
+    "        df.drop(columns={col}, inplace=True)\n",
+    "\n",
+    "# Kolumnen Survived har en jäkla massa null-värden. Vi får ta bort dessa. Inte kul, men raderna ger oss ingenting.\n",
+    "df = df[df['Survived'].notna()]\n",
+    "\n",
+    "# Kolumnen Survived är strängar just nu. Vi gör om det till ints.\n",
+    "df['Survived'].replace({'Yes': 1, 'No':0}, inplace=True)\n",
+    "df['Survived'] = df['Survived'].astype(int)\n",
+    "\n",
+    "# Vi fyller på avsaknade värden i kolumnen Age med genomsnittlig ålder. Vi \n",
+    "df['Age'].fillna(round(df['Age'].mean()), inplace=True)\n",
+    "df['Age'] = df['Age'].apply(lambda x: df['Age'].mean() if x > 120 else x)\n",
+    "df['Age'] = df['Age'].astype(int)\n",
+    "\n",
+    "# Vi fyller på avsaknade värden i kolumnen Embarked med Unknown.\n",
+    "df.Embarked.fillna('U', inplace=True)\n",
+    "\n",
+    "# Vi fyller på avsaknade värden i kolumnen Cabin med U0.\n",
+    "df.Cabin.fillna('U0', inplace=True)\n",
+    "\n",
+    "# Vi gör om kön till 1 och 0\n",
+    "df['Sex'] = df['Sex'].replace({'male':1,'female':0})\n",
+    "\n",
+    "# Vi splittar vår kolumn Cabin i section och hyttnymmer.\n",
+    "# Sen använder vi vår schyssta funktion för att extrahera kabinsektion och hyttnummer.\n",
+    "df[['CabinSection', 'CabinNr', 'dummy']] = df[\"Cabin\"].str.split(\"(\\d+)\", n=1, expand=True)\n",
+    "df.CabinSection = df.CabinSection.apply(lambda x: x[0])\n",
+    "df.CabinNr.fillna(0, inplace=True)\n",
+    "df.CabinNr = df.CabinNr.astype(int)\n",
+    "for col in ['CabinSection', 'Embarked']:\n",
+    "    df = dictionary_function(df, col)\n",
+    "    df[col].astype(int)\n",
+    "\n",
+    "# Vi droppar alla konstiga kolumner som dykt upp under processen och som inte påverkar överlevnadschanserna.\n",
+    "df.drop(columns={'dummy', 'Cabin', 'Ticket', 'Name', 'PassengerId'}, inplace=True)\n",
+    "\n",
+    "# Vi skalar/normaliserar vårt dataset\n",
+    "target_col = ['Survived']\n",
+    "feature_cols = [col for col in df.columns if col not in target_col]\n",
+    "\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "scaler = MinMaxScaler()\n",
+    "scaler_fit = scaler.fit(df[feature_cols])\n",
+    "df[feature_cols] = pd.DataFrame(scaler.transform(df[feature_cols]), index=df.index, columns=feature_cols)\n",
+    "\n",
+    "\n",
+    "# Vi definierar vårt target och våra features.\n",
+    "y = df[target_col]\n",
+    "X = df[feature_cols]\n",
+    "\n",
+    "# Vi delar upp vårt dataset i train och test.\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.30, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e5bac6fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Embarked</th>\n",
+       "      <th>CabinSection</th>\n",
+       "      <th>CabinNr</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>445</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0500</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.159777</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.229730</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>650</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.3750</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.015412</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>172</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0125</td>\n",
+       "      <td>0.125</td>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>0.021731</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>450</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.4500</td>\n",
+       "      <td>0.125</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.054164</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>314</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.5375</td>\n",
+       "      <td>0.125</td>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>0.051237</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.2625</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.014932</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>270</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.3750</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.060508</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>860</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.5125</td>\n",
+       "      <td>0.250</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.027538</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>435</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.1750</td>\n",
+       "      <td>0.125</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.234224</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.125</td>\n",
+       "      <td>0.648649</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.2625</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>0.150855</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.375</td>\n",
+       "      <td>0.175676</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>623 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Pclass  Sex     Age  SibSp     Parch      Fare  Embarked  CabinSection  \\\n",
+       "445     0.0  1.0  0.0500  0.000  0.333333  0.159777  0.666667         0.000   \n",
+       "650     1.0  1.0  0.3750  0.000  0.000000  0.015412  0.666667         1.000   \n",
+       "172     1.0  0.0  0.0125  0.125  0.166667  0.021731  0.666667         1.000   \n",
+       "450     0.5  1.0  0.4500  0.125  0.333333  0.054164  0.666667         1.000   \n",
+       "314     0.5  1.0  0.5375  0.125  0.166667  0.051237  0.666667         1.000   \n",
+       "..      ...  ...     ...    ...       ...       ...       ...           ...   \n",
+       "106     1.0  0.0  0.2625  0.000  0.000000  0.014932  0.666667         1.000   \n",
+       "270     0.0  1.0  0.3750  0.000  0.000000  0.060508  0.666667         1.000   \n",
+       "860     1.0  1.0  0.5125  0.250  0.000000  0.027538  0.666667         1.000   \n",
+       "435     0.0  0.0  0.1750  0.125  0.333333  0.234224  0.666667         0.125   \n",
+       "102     0.0  1.0  0.2625  0.000  0.166667  0.150855  0.666667         0.375   \n",
+       "\n",
+       "      CabinNr  \n",
+       "445  0.229730  \n",
+       "650  0.000000  \n",
+       "172  0.000000  \n",
+       "450  0.000000  \n",
+       "314  0.000000  \n",
+       "..        ...  \n",
+       "106  0.000000  \n",
+       "270  0.000000  \n",
+       "860  0.000000  \n",
+       "435  0.648649  \n",
+       "102  0.175676  \n",
+       "\n",
+       "[623 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train"
    ]
   },
   {
